--- a/index.html
+++ b/index.html
@@ -5,174 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Portfolio</title>
+    <title>Hello World</title>
 </head>
 
 <body>
 
-    <!-- Main Page Start -->
-    <section id="home">
-        <div class="container">
-            <div class="nav-content">
-                <span class="logo">MoonGun.</span>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#home">Anasayfa</a>
-                        </li>
-                        <li>
-                            <a href="#about-us">Hakkımda</a>
-                        </li>
-                        <li>
-                            <a href="#project">Projelerim</a>
-                        </li>
-                        <li>
-                            <a href="#contact-us">İletişim</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="content-content">
-                <div class="left-side">
-                    <h1>Hi, I'm <strong>Mehmet Halil MUNGAN</strong></h1>
-                    <h3>Full Stack Web Developer</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, incidunt eligendi
-                        repellendus
-                        inventore provident quae accusantium nostrum commodi quam, ipsum, quis impedit dignissimos.
-                        Voluptatibus
-                        dicta vitae, voluptas tenetur ad et?
-                        A natus sed ut veniam iste odio vero quaerat voluptatibus blanditiis voluptatum odit tempora
-                        dolore
-                        quisquam, error aut ipsum doloribus quidem molestias aperiam perferendis reiciendis id
-                        consectetur
-                    </p>
-                    <button class="button-download" type="button"><a href="/files/CV.pdf" target="_blank">Download CV</a></button>
-                    <div class="social-icons">
-                        <ul>
-                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        </ul>
-                        <ul>
-                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                        </ul>
-                        <ul>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        </ul>
-                        <ul>
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        </ul>
-                    </div>
-                </div>
-                <div class="right-side">
-                    <img src="img/profile-removebg-preview.png" alt="Resim Bulunamadı">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Main Page End -->
-
-    <!-- About Us Page Start -->
-    <section id="about-us">
-        <div class="container">
-            <div class="about-us-header">
-                <h1>Hakkımda</h1>
-            </div>
-            <div class="about-content">
-                <div class="about-card">
-                    <h1>Eğitim</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo cum laborum facilis
-                        perspiciatis ratione, iusto suscipit cumque maxime blanditiis ut fuga consectetur eveniet
-                        dignissimos earum?</p>
-                    <button>Daha fazla oku!</button>
-                </div>
-                <div class="about-card">
-                    <h1>Yetenekler</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo cum laborum facilis
-                        perspiciatis ratione, iusto suscipit cumque maxime blanditiis ut fuga consectetur eveniet
-                        dignissimos earum?</p>
-                    <button>Daha fazla oku!</button>
-                </div>
-                <div class="about-card">
-                    <h1>Hobiler</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo cum laborum facilis
-                        perspiciatis ratione, iusto suscipit cumque maxime blanditiis ut fuga consectetur eveniet
-                        dignissimos earum?</p>
-                    <button>Daha fazla oku!</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- About Us Page End -->
-
-    <!-- Project Page Start -->
-    <section id="project">
-        <div class="container">
-            <div class="project-header">
-                <h1>Projelerim</h1>
-            </div>
-            <div class="project-content">
-                <div class="project-card">
-                    <img src="https://yt3.googleusercontent.com/nW2PUT7dMlWAAV8di47dq7uHQRWtDmx-STShCqf2Zp_nHgk6b8NB_mxZTHDRT7es0YVsfSrr1qc=s900-c-k-c0x00ffffff-no-rj"
-                        alt="" width="100%">
-                    <h1>Netflix</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam natus molestiae incidunt saepe,
-                        ipsum libero consequuntur nesciunt? Accusantium, doloribus deserunt!</p>
-                    <p><button>Demo'ya Git</button></p>
-                </div>
-                <div class="project-card">
-                    <img src="https://yt3.googleusercontent.com/nW2PUT7dMlWAAV8di47dq7uHQRWtDmx-STShCqf2Zp_nHgk6b8NB_mxZTHDRT7es0YVsfSrr1qc=s900-c-k-c0x00ffffff-no-rj"
-                        alt="" width="100%">
-                    <h1>Trendyol</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam natus molestiae incidunt saepe,
-                        ipsum libero consequuntur nesciunt? Accusantium, doloribus deserunt!</p>
-                    <p><button>Demo'ya Git</button></p>
-                </div>
-                <div class="project-card">
-                    <img src="https://yt3.googleusercontent.com/nW2PUT7dMlWAAV8di47dq7uHQRWtDmx-STShCqf2Zp_nHgk6b8NB_mxZTHDRT7es0YVsfSrr1qc=s900-c-k-c0x00ffffff-no-rj"
-                        alt="" width="100%">
-                    <h1>Hepsiburada</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam natus molestiae incidunt saepe,
-                        ipsum libero consequuntur nesciunt? Accusantium, doloribus deserunt!</p>
-                    <p><button>Demo'ya Git</button></p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Project Page End -->
-
-    <!-- Contact Us Page Start -->
-    <section id="contact-us">
-        <div class="container">
-            <div class="contact-us-header">
-                <h1>İletişim</h1>
-            </div>
-            <div class="contact-us-content">
-                <div class="form-items">
-                    <img src="https://lh3.googleusercontent.com/D-haUsSx771Pt4brCyFEJUNKZaC8NUsD2bMB-ZL_yE2LnYdmt3YbgfZwDDM9B-wBHw"
-                        alt="" width="45%">
-                    <div class="fnamesurname">
-                        <label for="">Name: </label>
-                        <input type="text" name="" id="" placeholder="Adınız">
-                        <label for="">Surname: </label>
-                        <input type="text" name="" id="" placeholder="Soyadınız">
-                    </div>
-                    <div class="femail">
-                        <label for="">E-Mail: </label>
-                        <input type="email" name="" id="" placeholder="E-Mail Adresiniz">
-                    </div>
-                    <div class="ftextarea">
-                        <label for="">Mesajınız: </label>
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Mesajınız"></textarea>
-                    </div>
-                    <button>Gönder</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Contact Us Page End -->
+    <h1>Hello World!</h1>
     
 </body>
 
